--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ requests = "^2.32.3"
 easyocr = { version = "^1.7", optional = true }
 docling-parse = "^0.2.0"
 certifi = ">=2024.7.4"
+rtree = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
