--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ pypdfium2 = "^4.30.0"
 pydantic-settings = "^2.3.0"
 huggingface_hub = ">=0.23,<1"
 requests = "^2.32.3"
-easyocr = { version = "^1.7", optional = true }
+easyocr = { version = "^1.7"}
 docling-parse = "^0.2.0"
 certifi = ">=2024.7.4"
 rtree = "^1.3.0"
@@ -51,7 +51,6 @@ flake8-pyproject = "^1.2.3"
 pylint = "^2.17.5"
 
 [tool.poetry.extras]
-easyocr = ["easyocr"]
 ocr = ["easyocr"]
 
 [build-system]
