--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,3 +14,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Run styling check
         run: poetry run pre-commit run --all-files
+      - name: Install with poetry
+        run: poetry install --all-extras
+      - name: Testing
+        run: |
+          poetry run pytest -v tests
+      - name: Build with poetry
+        run: poetry build
