--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ packages = [{include = "docling"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.0.0"
-docling-core = "^1.1.2"
+docling-core = "^1.1.3"
 docling-ibm-models = "^1.1.3"
 deepsearch-glm = "^0.19.1"
 filetype = "^1.2.0"
@@ -36,6 +36,7 @@ docling-parse = "^1.1.3"
 certifi = ">=2024.7.4"
 rtree = "^1.3.0"
 scipy = "^1.14.1"
+pyarrow = "^17.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
