run all examples in CI
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,6 +16,12 @@ jobs:
         run: poetry run pre-commit run --all-files
       - name: Install with poetry
         run: poetry install --all-extras
+      - name: Run examples
+        run: |
+          for file in examples/*.py; do
+            # Execute example
+            poetry run python "$file"
+          done
       - name: Testing
         run: |
           poetry run pytest -v tests
