--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Run examples
         run: |
           for file in examples/*.py; do
-            # Execute example
-            poetry run python "$file"
+            echo "Running example $file"
+            poetry run python "$file" || exit 1
           done
       - name: Testing
         run: |
