skip batch_convert
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Run examples
         run: |
           for file in examples/*.py; do
+            # Skip batch_convert.py
+            if [[ "$(basename "$file")" == "batch_convert.py" ]]; then
+                echo "Skipping $file"
+                continue
+            fi
+
             echo "Running example $file"
             poetry run python "$file" || exit 1
           done
