--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ python = "^3.10"
 pydantic = "^2.0.0"
 docling-core = "^1.1.2"
 docling-ibm-models = "^1.1.3"
-deepsearch-glm = ">=0.19.0,<1"
+deepsearch-glm = "^0.19.1"
 filetype = "^1.2.0"
 pypdfium2 = "^4.30.0"
 pydantic-settings = "^2.3.0"
