--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ pytest-xdist = "^3.3.1"
 types-requests = "^2.31.0.2"
 flake8-pyproject = "^1.2.3"
 pylint = "^2.17.5"
+pandas-stubs = "^2.2.2.240909"
 
 
 [tool.poetry.group.examples.dependencies]
@@ -75,6 +76,14 @@ pretty = true
 # strict = true
 no_implicit_optional = true
 python_version = "3.10"
+
+[[tool.mypy.overrides]]
+module = [
+    "docling_parse.*",
+    "pypdfium2.*",
+    "networkx.*",
+]
+ignore_missing_imports = true
 
 [tool.flake8]
 max-line-length = 88
