feat: expose docling-core table exporters and add examples
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ packages = [{include = "docling"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.0.0"
-docling-core = "^1.3.0"
+docling-core = {git = "https://github.com/DS4SD/docling-core.git", rev = "feat-table-exports"}
 docling-ibm-models = "^1.1.7"
 deepsearch-glm = "^0.21.0"
 filetype = "^1.2.0"
