--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,7 @@ jobs:
         run: poetry install --all-extras
       - name: Testing
         run: |
-          poetry run pytest -v tests
+          poetry run pytest -vvv -s tests
       - name: Run examples
         run: |
           for file in examples/*.py; do
