--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,9 @@ packages = [{include = "docling"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.0.0"
-docling-core = {git = "ssh://git@github.com/DS4SD/docling-core.git", rev = "a83ff0056138d83ac2cb52bfb2ab1728ff86972f"}
+docling-core = {git = "ssh://git@github.com/DS4SD/docling-core.git", rev = "622f625df626bee12f15b6218bc831996925bb97"}
 docling-ibm-models = "^1.2.0"
-deepsearch-glm = {git = "ssh://git@github.com/DS4SD/deepsearch-glm.git", branch = "cau/new-format-dev"}
+deepsearch-glm = {git = "ssh://git@github.com/DS4SD/deepsearch-glm.git", rev = "d527b9aff90f5bc7ae86bd19bb6f88dda2cc56ae"}
 
 filetype = "^1.2.0"
 pypdfium2 = "^4.30.0"
