add tesseract in CI, improve error messages and allow to specify the tesseract cmd
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,6 +9,8 @@ jobs:
         python-version: ['3.10', '3.11', '3.12']
     steps:
       - uses: actions/checkout@v3
+      - name: Install tesseract
+        run: sudo apt-get -y tesseract-ocr libleptonica-dev libtesseract-dev pkg-config
       - uses: ./.github/actions/setup-poetry
         with:
           python-version: ${{ matrix.python-version }}
