fix(CI/CD): Add envvar TESSDATA_PREFIX in the checks.yml to ensure that tesseract has the proper path for the language models.
Signed-off-by: Nikos Livathinos <nli@zurich.ibm.com>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,6 +3,8 @@ on:
 
 jobs:
   run-checks:
+    env:
+      TESSDATA_PREFIX: /usr/local/share/tessdata/
     runs-on: ubuntu-latest
     strategy:
       matrix:
