--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ pyarrow = "^16.1.0"
 typer = "^0.12.5"
 python-docx = "^1.1.2"
 python-pptx = "^1.0.2"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
