--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ pydantic = "^2.0.0"
 docling-core = {git = "https://github.com/DS4SD/docling-core.git", rev = "e42a1ddf36e53134aef92f0447cc3352a4e82e70"}
 docling-ibm-models = {git = "https://github.com/DS4SD/docling-ibm-models.git", rev = "1d2e2a2e6eb152c237f1383cdba20cf85db80b97"}
 deepsearch-glm = {git = "https://github.com/DS4SD/deepsearch-glm.git", rev = "a5bcc9fd90d50cc1899da2f878ae8259269ab9bf"}
-docling-parse = {git = "https://github.com/DS4SD/docling-parse.git", rev = "e201c7cac81433cf367385f2980d3488357eb379"}
+docling-parse = "^1.5.1"
 
 filetype = "^1.2.0"
 pypdfium2 = "^4.30.0"
