Enable mypy and fix many reported errors
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,12 +20,12 @@ repos:
 #        pass_filenames: false
 #        language: system
 #        files: '\.py$'
-#      - id: mypy
-#        name: MyPy
-#        entry: poetry run mypy docling
-#        pass_filenames: false
-#        language: system
-#        files: '\.py$'
+      - id: mypy
+        name: MyPy
+        entry: poetry run mypy docling
+        pass_filenames: false
+        language: system
+        files: '\.py$'
       - id: nbqa_black
         name: nbQA Black
         entry: poetry run nbqa black examples
