add v2 docs placeholder [skip ci]
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ nav:
   - Get started:
     - Home: index.md
     - Installation: installation.md
-  #   - Docling v2: v2.md
+    - Docling v2: v2.md
   # - Concepts:
   #   - Docling Document: concepts/document.md
   #   - Chunking: concepts/chunking.md
