--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ nav:
   - Get started:
     - Home: index.md
     - Installation: installation.md
-    - Use Docling: use_docling.md
+    - Usage: use_docling.md
     - Docling v2: v2.md
   - Concepts:
     - The Docling Document format: concepts/docling_format.md
