add CI for docs
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,12 @@ jobs:
 
   code-checks:
     uses: ./.github/workflows/checks.yml
+  build-deploy-docs:
+    uses: ./.github/workflows/docs.yml
+    with:
+      deploy: true
+    permissions:
+      contents: write
   pre-release-check:
     runs-on: ubuntu-latest
     outputs:
