improve jobs naming
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
 jobs:
   code-checks:
     uses: ./.github/workflows/checks.yml
-  build-deploy-docs:
+  build-docs:
     uses: ./.github/workflows/docs.yml
     with:
       deploy: false
