--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
                 default: false
 
 jobs:
-    build-docs:
+    run-docs:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v4
