--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
     - Usage: usage.md
     - Docling v2: v2.md
   - Concepts:
-    - Docling Document: concepts/docling_format.md
+    - Docling Document: concepts/docling_document.md
   #   - Chunking: concepts/chunking.md
   - Examples:
     - Conversion:
