--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     if: ${{ github.event_name == 'push' }} || (${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }})
     uses: ./.github/workflows/checks.yml
   build-docs:
-    if: ${{ github.event_name == 'push' }} || (${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }})
+    if: false
     uses: ./.github/workflows/docs.yml
     with:
       deploy: false
