--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,18 @@ jobs:
         run: echo "${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' }}"
       - name: print 2b
         run: echo "${{ github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }}"
-      - name: print 2a
+      - name: print 2c
         run: echo "${{ github.event.pull_request.head.repo.full_name != 'ds4sd/docling' && github.event.pull_request.head.repo.full_name != 'DS4SD/docling' }}"
-  code-checks:
-    if: ${{ github.event_name == 'push' }} || (${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }})
-    uses: ./.github/workflows/checks.yml
-  build-docs:
-    if: false
-    uses: ./.github/workflows/docs.yml
-    with:
-      deploy: false
+  to-skip:
+    if: ${{ github.event_name == 'push' }} || ${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "I was here..." 
+  # code-checks:
+  #   if: ${{ github.event_name == 'push' }} || (${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }})
+  #   uses: ./.github/workflows/checks.yml
+  # build-docs:
+  #   if: false
+  #   uses: ./.github/workflows/docs.yml
+  #   with:
+  #     deploy: false
