--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,31 +14,11 @@ env:
   PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    steps:
-      - name: print 1
-        run: echo "${{ github.event_name }}"
-      - name: print 1a
-        run: echo "${{ github.event_name == 'push' }}"
-      - name: print 2
-        run: echo "${{ github.event.pull_request.head.repo.full_name }}"
-      - name: print 2a
-        run: echo "${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' }}"
-      - name: print 2b
-        run: echo "${{ github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }}"
-      - name: print 2c
-        run: echo "${{ github.event.pull_request.head.repo.full_name != 'ds4sd/docling' && github.event.pull_request.head.repo.full_name != 'DS4SD/docling' }}"
-  to-skip:
+  code-checks:
     if: ${{ github.event_name == 'push' || (github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling') }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "I was here... event_name=${{ github.event_name }}" 
-  # code-checks:
-  #   if: ${{ github.event_name == 'push' }} || (${{ github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling' }})
-  #   uses: ./.github/workflows/checks.yml
-  # build-docs:
-  #   if: false
-  #   uses: ./.github/workflows/docs.yml
-  #   with:
-  #     deploy: false
+    uses: ./.github/workflows/checks.yml
+  build-docs:
+    if: ${{ github.event_name == 'push' || (github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling') }}
+    uses: ./.github/workflows/docs.yml
+    with:
+      deploy: false
