Update to docling-core v2.1.0
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,7 @@ torchvision = [
 ######################
 python = "^3.10"
 pydantic = "^2.0.0"
-#docling-core = "^2.0.1"
-docling-core = { git = "https://github.com/DS4SD/docling-core.git", branch = "dev/add-to_indented_text" }
+docling-core = "^2.1.0"
 docling-ibm-models = "^2.0.1"
 deepsearch-glm = "^0.26.1"
 filetype = "^1.2.0"
