--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ torchvision = [
   {markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'", version = "^0"},
   {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "~0.17.2"}
 ]
-ocrmac = {markers = "sys_platform == 'darwin'", version = "^1.0.0"}
+ocrmac = {markers = "sys_platform == 'darwin'", version = "^1.0.0", optional = true}
 
 [tool.poetry.extras]
 tesserocr = ["tesserocr"]
