--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ nav:
     - Home: index.md
     - Installation: installation.md
     - Usage: usage.md
+    - CLI: cli.md
     - Docling v2: v2.md
   - Concepts:
     - Concepts: concepts/index.md
@@ -98,6 +99,7 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - attr_list
+  - mkdocs-click
 plugins:
   - search
   - mkdocs-jupyter
