added tooling for the cli
Signed-off-by: Peter Staar <taa@zurich.ibm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ python-pptx = "^1.0.2"
 beautifulsoup4 = "^4.12.3"
 pandas = "^2.1.4"
 marko = "^2.1.2"
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
