added documentation, tests and updated dependencies to support paddleocr
Signed-off-by: Swaymaw <swaymaw@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ torchvision = [
 
 [tool.poetry.extras]
 tesserocr = ["tesserocr"]
+paddleocr = ["paddlepaddle", "paddleocr"]
 
 [tool.poetry.scripts]
 docling = "docling.cli.main:app"
