--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ beautifulsoup4 = "^4.12.3"
 pandas = "^2.1.4"
 marko = "^2.1.2"
 openpyxl = "^3.1.5"
-ocrmac = { version = "^1.0.0", optional = true }
+ocrmac = { version = "^1.0.0", markers = "sys_platform == 'darwin'", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
