--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ marko = "^2.1.2"
 openpyxl = "^3.1.5"
 ocrmac = { version = "^1.0.0", markers = "sys_platform == 'darwin'", optional = true }
 rapidocr-onnxruntime = { version = "^1.4.0", optional = true, markers = "python_version < '3.13'" }
+onnxruntime = "^1.7.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
