--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,12 @@ marko = "^2.1.2"
 openpyxl = "^3.1.5"
 ocrmac = { version = "^1.0.0", markers = "sys_platform == 'darwin'", optional = true }
 rapidocr-onnxruntime = { version = "^1.4.0", optional = true, markers = "python_version < '3.13'" }
-onnxruntime = "^1.7.0"
+onnxruntime = [
+  # 1.19.2 is the last version with python3.9 support,
+  # see https://github.com/microsoft/onnxruntime/releases/tag/v1.20.0
+  { version = ">=1.7.0,<1.20.0", optional = true, markers = "python_version < '3.10'" },
+  { version = "^1.7.0", optional = true, markers = "python_version >= '3.10'" }
+]
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
@@ -105,7 +110,7 @@ torchvision = [
 [tool.poetry.extras]
 tesserocr = ["tesserocr"]
 ocrmac = ["ocrmac"]
-rapidocr = ["rapidocr-onnxruntime"]
+rapidocr = ["rapidocr-onnxruntime", "onnxruntime"]
 
 [tool.poetry.scripts]
 docling = "docling.cli.main:app"
