--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ onnxruntime = [
   { version = ">=1.7.0,<1.20.0", optional = true, markers = "python_version < '3.10'" },
   { version = "^1.7.0", optional = true, markers = "python_version >= '3.10'" }
 ]
+pubmed-parser = "^0.5.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
@@ -136,6 +137,7 @@ pretty = true
 no_implicit_optional = true
 plugins = "pydantic.mypy"
 python_version = "3.10"
+ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = [
