--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,11 @@ packages = [{include = "docling"}]
 # actual dependencies:
 ######################
 python = "^3.9"
-docling-ibm-models = { git = "ssh://git@github.com/DS4SD/docling-ibm-models.git", branch = "nli/performance" }
+docling-ibm-models = "^3.0.0"
 deepsearch-glm = "^1.0.0"
 docling-parse = "^3.0.0"
-#docling-core = { version = "^2.9.0", extras = ["chunking"] }
-docling-core = { git = "ssh://git@github.com/DS4SD/docling-core.git", branch = "cau/include-picture-contents" }
+docling-core = { version = "^2.9.0", extras = ["chunking"] }
+#docling-core = { git = "ssh://git@github.com/DS4SD/docling-core.git", branch = "cau/include-picture-contents" }
 pydantic = "^2.0.0"
 filetype = "^1.2.0"
 pypdfium2 = "^4.30.0"
