--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -7,7 +7,7 @@ merge_protections:
       - "title ~=
         ^(fix|feat|docs|style|refactor|perf|test|build|ci|chore|revert)(?:\\(.+\
         \\))?(!)?:"
-  - name: Require two reviewer for test updates
+  - name: Require one reviewer for test updates
     description: When test data is updated, we require two reviewers
     if:
       - base = main
@@ -15,4 +15,4 @@ merge_protections:
           - files ~= ^tests/data
           - files ~= ^tests/data_scanned
     success_conditions:
-      - "#approved-reviews-by >= 2"
+      - "#approved-reviews-by >= 1"
