--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ flycheck_*.el
 # network security
 /network-security.data
 
-
+for-me.md
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
