--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,10 @@ pydantic-settings = "^2.3.0"
 huggingface_hub = ">=0.23,<1"
 requests = "^2.32.3"
 easyocr = "^1.7"
+google-api-core="^2.13.0"
+google-auth="^2.23.4"
+google-cloud-vision="^3.4.5"
+googleapis-common-protos="^1.61.0"
 tesserocr = { version = "^2.7.1", optional = true }
 certifi = ">=2024.7.4"
 rtree = "^1.3.0"
