--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
           run: poetry run mkdocs build --verbose --clean
         - name: Make docs LLM ready
           if: inputs.deploy
-          uses: demodrive-ai/llms-txt-action@v1
+          uses: demodrive-ai/llms-txt-action@ad720693843126e6a73910a667d0eba37c1dea4b
         - name: Build and push docs
           if: inputs.deploy
           run: poetry run mkdocs gh-deploy --force --dirty
