--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,8 @@ packages = [{include = "docling"}]
 # actual dependencies:
 ######################
 python = "^3.9"
-# docling-core = { version = "^2.12.1", extras = ["chunking"] }
-docling-core = { git = "https://github.com/DS4SD/docling-core", branch = "code_item"}
 pydantic = "^2.0.0"
+docling-core = { version = "^2.14.0", extras = ["chunking"] }
 docling-ibm-models = "^3.1.0"
 deepsearch-glm = "^1.0.0"
 docling-parse = "^3.0.0"
