--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,8 @@ nav:
       - "Multimodal export": examples/export_multimodal.py
       - "Force full page OCR": examples/full_page_ocr.py
       - "Accelerator options": examples/run_with_accelerator.py
-      - "Simple translation": examples/translate.py
+      - "Simple translation": examples/translate.py   
+      - examples/backend_xml_rag.ipynb
     - ✂️ Chunking:
       - examples/hybrid_chunking.ipynb
     - 🤖 RAG with AI dev frameworks:
