--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,7 +156,8 @@ module = [
     "deepsearch_glm.*",
     "lxml.*",
     "bs4.*",
-    "huggingface_hub.*"
+    "huggingface_hub.*",
+    "pylatexenc.*"
 ]
 ignore_missing_imports = true
 
