--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ onnxruntime = [
   { version = "^1.7.0", optional = true, markers = "python_version >= '3.10'" }
 ]
 pillow = "^10.0.0"
+pylatexenc = "^2.10"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.4.2"}
