Add parsing configuration
Signed-off-by: Rafael Teixeira de Lima <Rafael.td.lima@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,7 +157,8 @@ module = [
     "deepsearch_glm.*",
     "lxml.*",
     "bs4.*",
-    "huggingface_hub.*"
+    "huggingface_hub.*",
+    "pylatexenc.*"
 ]
 ignore_missing_imports = true
 
