--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ packages = [{include = "docling"}]
 ######################
 python = "^3.9"
 pydantic = "^2.0.0"
-docling-core = { version = "^2.15.1", extras = ["chunking"] }
+docling-core = {git = "https://github.com/DS4SD/docling-core", rev = "dev/add-geometric-operations-in-boundingbox"}
 docling-ibm-models = "^3.3.0"
 deepsearch-glm = "^1.0.0"
 docling-parse = "^3.1.0"
