--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pydantic = "^2.0.0"
 docling-core = {version = "^2.16.1", extras = ["chunking"]}
 docling-ibm-models = "^3.3.0"
 deepsearch-glm = "^1.0.0"
-docling-parse = "^3.1.0"
+docling-parse = {git = "ssh://git@github.com/DS4SD/docling-parse.git", rev = "feat/add-char-level-extraction"}
 filetype = "^1.2.0"
 pypdfium2 = "^4.30.0"
 pydantic-settings = "^2.3.0"
