chore: check docs search fix
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
       - "**"
       - "!main"
       - "!gh-pages"
+      - "!chore-docs-search-fix"  # FIX remove tmp condition
 
 env:
   # disable keyring (https://github.com/actions/runner-images/issues/6185):
