--- a/.github/workflows/cd-docs.yml
+++ b/.github/workflows/cd-docs.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - "main"
+      - "chore-docs-search-fix"  # FIX remove tmp condition
 
 jobs:
   build-deploy-docs:
