Actor: Refactor `actor.sh` and add `docling_processor.py`
Refactor the `actor.sh` script to modularize functions for finding the Apify CLI, setting up a temporary environment, and cleaning it up. Introduce a new function, `get_actor_input()`, to handle input detection more robustly. Replace inline Python conversion logic with an external script, `docling_processor.py`, for processing documents via the docling-serve API.

Signed-off-by: Václav Vančura <commit@vancura.dev>

--- a/.actor/Dockerfile
+++ b/.actor/Dockerfile
@@ -62,6 +62,7 @@ ENV EASYOCR_MODULE_PATH=/tmp/easyocr-models
 COPY --chown=1000:1000 .actor/actor.sh .actor/actor.sh
 COPY --chown=1000:1000 .actor/actor.json .actor/actor.json
 COPY --chown=1000:1000 .actor/input_schema.json .actor/input_schema.json
+COPY --chown=1000:1000 .actor/docling_processor.py .actor/docling_processor.py
 RUN chmod +x .actor/actor.sh
 
 # Copy the build files from builder
