update github pages
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Docling
-site_url: https://ds4sd.github.io/docling/
+site_url: https://docling-project.github.io/docling/
 repo_name: docling-project/docling
 repo_url: https://github.com/docling-project/docling
 
